fixed spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -503,6 +503,7 @@ body {
     display: flex;
     justify-content: center;
     gap: 20px;
+    padding-bottom: 10px;
   }
 
   .contactLogos {
